--- a/movie-planner-frontend/src/App.css
+++ b/movie-planner-frontend/src/App.css
@@ -187,7 +187,7 @@ body {
   display: inline-block;
 }
 
-/* No Results CSS */
+/* No Results */
 .no-results {
   grid-column: 1 / -1; 
   display: flex;
