--- a/movie-planner-frontend/src/components/MovieCard.css
+++ b/movie-planner-frontend/src/components/MovieCard.css
@@ -62,7 +62,7 @@
   flex-wrap: wrap;
 }
 
-.time-button {
+/* .time-button {
   padding: 8px 12px;
   border-radius: 6px;
   font-weight: bold;
@@ -72,4 +72,32 @@
 
 .time-button:hover {
   transform: scale(1.05);
+} */
+
+.time-button {
+    padding: 10px 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2px;
+    transition: transform 0.2s;
 }
+
+.time-button:hover {
+    transform: scale(1.05);
+}
+
+.format-tag {
+  font-size: 0.55rem;
+  font-weight: bold;
+  background: #000;
+  padding: 1px 4px;
+  border-radius: 2px;
+  font-weight: 800;
+  letter-spacing: 0.5px;
+  margin-top: 4px;
+  display: block;
+}
+.format-dolby .format-tag { color: #d4af37; border: 0.5px solid #d4af37;}
+.format-imax .format-tag { color: #0071ce; border: 0.5px solid #0071ce; }
+.format-rpx .format-tag { color: #E40078; border: 0.5px solid #E40078;}
